<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_poster_imageview"
        android:layout_width="138dp"
        android:layout_height="204dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/poster" />

    <TextView
        android:id="@+id/movie_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="?attr/actionModeSplitBackground"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/movie_title_standart_value" />

    <TextView
        android:id="@+id/movie_year_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
        tools:text="@string/movie_year_standart_value" />

    <TextView
        android:id="@+id/movie_kinopoisk_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toBottomOf="@+id/movie_genre_tv"
        tools:text="@string/kinopoisk_standart_value" />

    <TextView
        android:id="@+id/movie_imdb_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toBottomOf="@+id/movie_kinopoisk_tv"
        tools:text="@string/imdb_standart_value" />

    <TextView
        android:id="@+id/movie_overview_tv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster_imageview"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/movie_overview_standart_value" />

    <Button
        android:id="@+id/movie_like_button"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorAccent"
        android:text="@string/like_button_standart_value"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_poster_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toBottomOf="@+id/movie_title_tv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/movie_genre_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/movie_poster_imageview"
        app:layout_constraintTop_toBottomOf="@+id/movie_year_tv"
        tools:text="@string/genre_standart_value" />

</android.support.constraint.ConstraintLayout>